# triangles

./: README.md
Triangles/: CmakeLists.txt
Triangles/src/: CMakeLists.txt  helpers.h  logic.cpp  logic.h  point.cpp  point.h  polygon.cpp  polygon.h  triangle.h
Triangles2/src/: CMakeLists.txt  logic.cpp  logic.h  polygon.cpp  polygon.h  run.cpp  triangle.cpp
